syntax = "proto3";

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/tx/v1beta1/tx.proto";
import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";

message Envelope {
  string chain_id = 1;
  uint64 account_number = 2;
  uint64 sequence = 3;
  string address = 4;
  google.protobuf.Any public_key = 5;
  repeated google.protobuf.Any message = 6;
  string memo = 7;
  repeated cosmos.base.v1beta1.Coin fees = 8;
  string fee_payer = 9;
  string fee_granter = 10;
  repeated cosmos.base.v1beta1.Coin tip = 11;
  string tipper = 12;
  uint64 gas_limit = 13;
  uint64 timeout_height = 14;
  repeated cosmos.tx.v1beta1.SignerInfo other_signer = 15;
  repeated google.protobuf.Any extension_options = 16;
  repeated google.protobuf.Any non_critical_extension_options = 17;
  string hash_of_raw_bytes = 18;
}
